package com.unsw.tilegame.entities;

/**
 * an interface that manages moving algo
 * @author cecilian
 * @since 2.5
 * @version 2.5
 */
public interface CreatureAlgorithm {
    public void Move(float xMove,float yMove);
}
