package com.unsw.tilegame.entities;

/**
 * @author cecilian
 * @version 2/5
 * @since 2/5
 */
public interface DieBehavior {
    public void die();
}
